deploy/python.deploy/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-fibonacci
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-fibonacci
  template:
    metadata:
      labels:
        app: python-fibonacci
        tag: fibonacci
    spec:
      containers:
        - name: python-fibonacci
          image: cloudreadyclub/python-fibonacci:2.2
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "256Mi"
              cpu: "400m"
            requests:
              memory: "128Mi"
              cpu: "200m"
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
              scheme: HTTP
            timeoutSeconds: 120
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
              scheme: HTTP
            timeoutSeconds: 120
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
