deploy/python.deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-fibonacci
spec:
  selector:
    app: python-fibonacci
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
