deploy/python.deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-fibonacci
spec:
  rules:
    - host: python.fibonacci.local
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: python-fibonacci
              port: 
                number: 80
